<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LeaderBoardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.AppBarLayout">

        <androidx.appcompat.widget.Toolbar
            app:logo="@drawable/background"
            android:background="@color/black"
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="?android:actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <TextView
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/lb_orange"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_submission" />

        <View
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="70dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lb_light_uk"
            android:layout_marginTop="5dp" />
        
        <LinearLayout
            android:layout_marginBottom="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="1.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:textStyle="bold"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/dark_two"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/custom_input"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:id="@+id/edt_first_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:ems="10"
                android:layout_weight="0.5"
                android:hint="@string/hint_first_name"
                android:autofillHints="@string/hint_first_name" />

            <EditText
                android:textStyle="bold"
                android:textColor="@color/dark_two"
                android:textColorHint="@android:color/darker_gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/custom_input"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:id="@+id/edt_last_name"
                android:layout_height="45dp"
                android:ems="10"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:hint="@string/hint_last_name"
                android:autofillHints="@string/hint_first_name" />

        </LinearLayout>

        <EditText
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/dark_two"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/custom_input"
            android:id="@+id/edt_email_address"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/hint_email_address"
            android:autofillHints="@string/hint_email_address" />

        <EditText
            android:textStyle="bold"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/dark_two"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/custom_input"
            android:id="@+id/edt_project_link"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/hint_project_link"
            android:autofillHints="@string/hint_project_link" />

        <com.google.android.material.button.MaterialButton
            android:textColor="@color/white"
            app:backgroundTint="@color/lb_dark_green"
            app:cornerRadius="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/btn_submit"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    



</androidx.coordinatorlayout.widget.CoordinatorLayout>